WIP: VictoriaLogs Single droplet for DigitalOcean #4

--- a/deployment/marketplace/digitialocean/VictoriaLogs/files/etc/systemd/system/vlsingle.service
+++ b/deployment/marketplace/digitialocean/VictoriaLogs/files/etc/systemd/system/vlsingle.service
@@ -21,8 +21,8 @@ ProtectSystem=full
 LimitNOFILE=1048576
 LimitNPROC=1048576
 LimitCORE=infinity
-StandardOutput=syslog
-StandardError=syslog
+StandardOutput=journal
+StandardError=journal
 SyslogIdentifier=vmsingle
 
 [Install]
